I underestimated this project's difficulty (I think)